PyMaker/datas/object2/RawHTML/i8601/Python_DOC_referPages.a-python-program-to-convert-date-to-numbers.txt
<div class="post-text" itemprop="text">
<p>I want to make a program which takes day, month and year and print them in the format e.g: 
    March 14th, 2016.
I get this error:</p>
<pre><code>  File "date.py", line 23
    else:
       ^
SyntaxError: invalid syntax
</code></pre>
<p>what is my problem? and how can I fix the code??
this is my code:</p>
<pre><code>def get_month_english(month):
    if (month == 1):
        return "January"
    else:
        if (month == 2):
            return "February"
    else:
        if (month == 3):
            return "March"
    else:
        if (month == 4):
            return "April"
    else:
        if (month == 5):
            return "May"
    else:
        if (month == 6):
            return "June"
    else:
        if (month == 7):
            return "July"
    else:
        if (month == 8):
            return "August"
    else:
        if (month == 9):
            return "September"
    else:
        if (month == 10):
            return "October"
    else:
        if (month == 11):
            return "November"
    else:
        return "December"
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>May I suggest that instead of using a chain of conditions, that you simply use a list:</p>
<pre><code>def get_month_english(month):
    months = [
        "January",
        "February",
        "March",
        "April",
        "May",
        "June",
        "July",
        "August",
        "September",
        "October",
        "November",
        "December"
    ]
    return months[month-1]
</code></pre>
<p>Or, perhaps a dictionary, so you don't have to subtract 1 to get the correct index:</p>
<pre><code>def get_month_english(month):
    months = {
        1: "January",
        2: "February",
        3: "March",
        4: "April",
        5: "May",
        6: "June",
        7: "July",
        8: "August",
        9: "September",
        10: "October",
        11: "November",
        12: "December"
    }
    return months[month]
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>It would be worthwhile to go through this tutorial-</p>
<p><a href="https://www.tutorialspoint.com/python/python_if_else.htm" rel="nofollow noreferrer">https://www.tutorialspoint.com/python/python_if_else.htm</a></p>
<p>Once you are thorough on the above you should be able to justify the code below</p>
<pre><code>def get_month_english(month):
    if (month == 1):
        return "January"
    elif (month == 2):
            return "February"
    elif (month == 3):
            return "March"
    elif (month == 4):
            return "April"
    elif (month == 5):
            return "May"
    elif (month == 6):
            return "June"
    elif (month == 7):
            return "July"
    elif (month == 8):
            return "August"
    elif (month == 9):
            return "September"
    elif (month == 10):
            return "October"
    elif (month == 11):
            return "November"
    else:
        return "December"
</code></pre>
</div>
<span class="comment-copy">try elif: instead the python syntax for if should only have a single else: or you need to indent the else statement so they align with the next closest if before it.</span>
<span class="comment-copy">Use <code>elif</code>... instead of <code>else</code>. Since you're only supposed to have at most 1 else after an if statement</span>
<span class="comment-copy"><a href="http://www.tutorialspoint.com/python/python_if_else.htm" rel="nofollow noreferrer">tutorialspoint.com/python/python_if_else.htm</a></span>
<span class="comment-copy">@rob in python a if-statement <b>must not</b> have more then one else clause - see <a href="https://docs.python.org/3/reference/compound_stmts.html#the-if-statement" rel="nofollow noreferrer">The if statement</a></span>
<span class="comment-copy">@DahliaSR Sure, if you indent each else with the if above it each if would only have one else clause.. try it. Its UBER ugly, because you would have code that has 12 indentation deep.. but it would be legal.</span>
